Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.2
-
78b35d3c3 (dev), 03aa4df05 (6.5)
Description
Inside a QQuickView the focus is set to the root Item. If a Drawer is opened and closed the root Item is unable to gain the focus by clicking the Item (or a child Rectangle). A button is able to gain the focus and since it's not accepting the key events they are propagated to the root Item which can then consume them.
To reproduce the issue, please run the attached example:
- The initial focus is not on the root Item, try pressing the key and nothing is printed in the output
- Clicking the QML scene gains the focus to the root Item and the key presses can be seen in the output.
- Click the button to open the Drawer and then close it.
- Clicking the root Item or the Rectangle does not gain the active focus for them, thus the key presses cannot be detected.
- Clicking the button "Do Nothing" gives the active focus to the button and the key events are propagated to the root Item.
The expected result is that the root Item would gain the active focus after closing the Drawer.
Attachments
For Gerrit Dashboard: QTBUG-111679 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
467978,14 | Reset active focus item of content item when popup closes | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
479990,2 | Reset active focus item of content item when popup closes | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
479991,3 | Reset active focus item of content item when popup closes | 6.4 | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |