Reset active focus item of content item when popup closes

The pop-up window usually overwrite sub focus item, which makes scope
item not able to determine next active focus item when its closed.
This patch save and reset active focus item of content item within
popup

Fixes: QTBUG-111679
Change-Id: Ic3322f20e8075ca1650c3ae420011d4400686021
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 78b35d3c34dca79828c4af555afd2440bfb38f7a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>